<resources>
    <string name="app_name">Q-Rice</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="sign_in_text_btn">Sign in</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="tab_text_1">rice Variety</string>
    <string name="tab_text_2">rice Disease</string>
    <string name="tab_text_3">nutrient Deficiency</string>
    <string name="tab_text_4">seed Quality</string>
    <string name="content_tab_home">Welcome Home</string>
    <string name="content_tab_profile">Change your Profile here</string>
    <string name="content_tab_text">This is Tab %1$d</string>

    <string name="section_heading">Services</string>
    <string name="services_name">Services Name</string>

    <string-array name="data_name">
        <item>Rice Variety Detection</item>
        <item>Disease Detection in Rice Plants</item>
        <item>Nutrient Deficiency Detection</item>
        <item>Seed Quality Detection</item>
    </string-array>

    <integer-array name="data_icon">
        <item>@drawable/rice_variety_detection</item>
        <item>@drawable/disease_detection_in_rice_plants</item>
        <item>@drawable/nutrient_deficiency_detection</item>
        <item>@drawable/seed_quality_detection</item>
    </integer-array>

    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
</resources>