<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.login.LoginActivity">

   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_centerInParent="true">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:clipToPadding="false"
           android:orientation="vertical"
           android:padding="16dp">

           <EditText
               android:id="@+id/etUsername"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/username_hint"
               android:textColor="@color/black"
               android:textColorHint="@color/natural_rice_beige"
               android:textCursorDrawable="@color/natural_rice_beige"
               android:inputType="text|textNoSuggestions"
               android:backgroundTint="@color/natural_rice_beige"/>

           <EditText
               android:id="@+id/etPassword"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="10dp"
               android:hint="@string/password_hint"
               android:textColor="@color/black"
               android:textColorHint="@color/natural_rice_beige"
               android:textCursorDrawable="@color/natural_rice_beige"
               android:inputType="textPassword"
               android:backgroundTint="@color/natural_rice_beige"/>

           <Button
               android:id="@+id/btnLogin"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="20dp"
               android:text="@string/sign_in_text_btn"
               android:textColor="@color/black"
               android:backgroundTint="@color/rice"/>

           <ProgressBar
               android:id="@+id/loading"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:layout_marginTop="20dp"
               android:visibility="gone" />
       </LinearLayout>
   </ScrollView>
</RelativeLayout>